--- a/Delivery/index.html
+++ b/Delivery/index.html
@@ -20,5 +20,9 @@
                 </button>
             </div>
         </header>
+        <section class="promo">
+            <h1 class="promo-title">Онлайн-сервис <br />доставки еды на дом</h1>
+            <p class="promo-text">Блюда из любимого ресторана привезет <br /> курьер в перчатках, маске и с антисептиком</p>
+        </section>
     </body>
 </html>
